# senate

./: .env.example  .env.template  .gitignore  Dockerfile.bulletin-rust  Dockerfile.detective  Dockerfile.discord-butler  Dockerfile.discord-secretary  Dockerfile.email-secretary  Dockerfile.quorum-email  Dockerfile.refresher  Dockerfile.slack-secretary  Dockerfile.telegram-butler  Dockerfile.telegram-secretary  LICENSE  README.md  ci_setup_env.sh  docker-compose.yml  fixtures.ts  package-lock.json  package.json  playwright.config.ts  prepareci.sh  results.html  turbo.json
apps/aave-notifs/: Cargo.toml  package.json  railway.json
apps/aave-notifs/src/: main.rs
apps/bulletin-rust/: Cargo.toml  package.json  railway.json
apps/bulletin-rust/src/: main.rs
apps/detective/: Cargo.toml  Dockerfile  README.md  build.rs  package.json  railway.json  tsconfig.json
apps/detective-rust/: Cargo.toml  Dockerfile  Rocket.toml  build.rs
apps/detective-rust/abi/: compoundgov.json
apps/detective-rust/abis/aave/: aavegov.json
apps/detective-rust/prisma/: schema.prisma
apps/detective-rust/src/: main.rs  prisma.rs
apps/detective-rust/src/contracts/: aavegov.rs  compoundgov.rs  dydxgov.rs  gitcoingov.rs  makerpollvotearbitrum.rs  mod.rs
apps/detective-rust/src/router/: chain_proposals.rs  snapshot_proposals.rs  update_chain_proposals.rs  update_chain_votes.rs  update_snapshot_proposals.rs  update_snapshot_votes.rs
apps/detective-rust/src/utils/: abi.rs  etherscan.rs
apps/detective/abi/: aaveexecutor.json  aavestrategy.json  arbitrumtreasury.json  compoundgov.json  dydxexecutor.json  dydxstrategy.json  ensgov.json  hopgov.json  interestprotocolgov.json  makerpollcreate.json  makerpollvote.json  makerpollvotearbitrum.json  mod.rs  optimismvotemodule_54a8f.json  zeroxstakingproxy.json  zeroxtreasury.json
apps/detective/prisma/: schema.prisma
apps/detective/src/: app.controller.ts  app.service.ts  main.rs  main.ts  telemetry.rs  utils.ts
apps/detective/src/contracts/: aaveexecutor.rs  aavegov.rs  aavestrategy.rs  arbitrumcore.rs  arbitrumtreasury.rs  compoundgov.rs  dydxexecutor.rs  dydxgov.rs  dydxstrategy.rs  ensgov.rs  gitcoingov.rs  hopgov.rs  interestprotocolgov.rs  makerexecutive.rs  makerpollcreate.rs  makerpollvote.rs  makerpollvotearbitrum.rs  mod.rs  optimismgov.rs  optimismvotemodule_5_4a_8f.rs  shared_types.rs  uniswapgov.rs  zeroxstakingproxy.rs  zeroxtreasury.rs
apps/detective/src/handlers/: mod.rs
apps/detective/src/proposals/: chainProposals.ts  snapshotProposals.ts
apps/detective/src/router/: chain_proposals.rs  chain_votes.rs  mod.rs  snapshot_proposals.rs  snapshot_votes.rs
apps/detective/src/utils/: arbriscan.rs  etherscan.rs  maker_polls_sanity.rs  optimiscan.rs  snapshot_sanity.rs
apps/detective/src/votes/: chainDaoVotes.ts  snapshotDaoVotes.ts
apps/detective/test/: app.e2e-spec.ts  makerPollVotes.test.ts
apps/discord-butler/: Cargo.toml  Dockerfile  package.json  railway.json  rustfmt.toml
apps/discord-butler/prisma/: schema.prisma
apps/discord-butler/src/: main.rs  prisma.rs
apps/discord-butler/src/dispatch/: ended.rs  ending_soon.rs  mod.rs  new_proposals.rs  update_active.rs  update_ended.rs
apps/discord-butler/src/generate/: ended.rs  ending_soon.rs  mod.rs  new_proposals.rs
apps/discord-butler/src/messages/: ended.rs  ending_soon.rs  mod.rs  new.rs
apps/discord-butler/src/utils/: vote.rs
apps/discord-secretary/: Cargo.toml  package.json  railway.json
apps/discord-secretary/src/: main.rs  telemetry.rs
apps/discord-secretary/src/dispatch/: ended.rs  ending_soon.rs  mod.rs  new_proposals.rs  update_active.rs  update_ended.rs  update_hidden.rs
apps/discord-secretary/src/generate/: ended.rs  ending_soon.rs  new_proposals.rs
apps/discord-secretary/src/utils/: posthog.rs  vote.rs
apps/email-secretary/: Cargo.toml  README.md  package.json  railway.json
apps/email-secretary/mjml/layouts/: aave-bulletin.html  aave-bulletin.mjml  aave-transactional.html  aave-transactional.mjml  aave.html  aave.mjml  senate-bulletin.html  senate-bulletin.mjml  senate-transactional.html  senate-transactional.mjml  senate.html  senate.mjml  uniswap-bulletin.html  uniswap-bulletin.mjml  uniswap-transactional.html  uniswap-transactional.mjml  uniswap.html  uniswap.mjml
apps/email-secretary/mjml/templates/: aave-quorum.html  aave-quorum.mjml  bulletin.html  bulletin.mjml  senate-quorum.html  senate-quorum.mjml  uniswap-quorum.html  uniswap-quorum.mjml
apps/email-secretary/mjml/test-variables/: bulletin.json  quorum.json
apps/email-secretary/postmark/: config.production.js  package-lock.json
apps/email-secretary/prisma-cli/: Cargo.toml
apps/email-secretary/src/: main.rs  telemetry.rs
apps/email-secretary/src/bulletin/: bulletin_emails.rs
apps/email-secretary/src/quorum/: quroum_emails.rs
apps/email-secretary/src/utils/: countdown.rs  posthog.rs  vote.rs
apps/refresher/: .eslintrc.cjs  .gitignore  .prettierrc.cjs  Cargo.toml  Dockerfile  README.md  package.json  railway.json  rustfmt.toml  tsconfig.json  tsup.config.ts
apps/refresher-rust/: .gitignore  Cargo.toml  Dockerfile  railway.json
apps/refresher-rust/.cargo/: config.toml
apps/refresher-rust/prisma/: schema.prisma
apps/refresher-rust/prisma-cli/: Cargo.toml
apps/refresher-rust/src/: config.rs  handlers.rs  main.rs  prisma.rs
apps/refresher-rust/src/consume_queue/: chain_proposals.rs  chain_votes.rs  snapshot_proposals.rs  (+1 more)
apps/refresher/prisma/: schema.prisma
apps/refresher/prisma-cli/: Cargo.toml
apps/refresher/src/: config.rs  config.ts  createHandlers.ts  handlers.rs  index.ts  main.rs  refresh_status.rs  telemetry.rs  utils.ts
apps/slack-secretary/: Cargo.toml  package.json  railway.json
apps/slack-secretary/.cargo/: config.toml
apps/slack-secretary/src/: main.rs  telemetry.rs
apps/telegram-secretary/: Cargo.toml  package.json  railway.json
apps/telegram-secretary/src/: main.rs  telemetry.rs
utilities/postmark_data/: .gitignore  Cargo.toml
utilities/postmark_data/src/: main.rs  outbound_clicks.rs  outbound_data.rs  outbound_opens.rs
(+844 files in other folders)
