[workspace]
members = [
    "prisma-cli", "."
]

[package]
name = "detective-rust"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
dotenv = "0.15.0"
ethers = { version="2.0.2", features = ["rustls", "openssl", "abigen"] }
lazy_static = "1.4.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7", default-features = false, features = ["postgresql"] }
reqwest = {version = "0.11.16", features = ["json"]}
reqwest-middleware = "0.2.1"
reqwest-retry = "0.2.2"
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
serde = "1.0.159"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }


[build-dependencies]
ethers = { version="2.0.2", features = ["rustls", "openssl", "abigen"] }
