[workspace]
members = [
    "prisma-cli", "."
]

[package]
name = "detective-rust"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
chrono = "0.4.24"
dotenv = "0.15.0"
ethers = { version="2.0.2", features = ["rustls", "openssl", "abigen"] }
futures = "0.3.28"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
num-bigint = "0.4.3"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7", default-features = false, features = ["postgresql"] }
regex = "1.7.3"
reqwest = {version = "0.11.16", features = ["json"]}
reqwest-middleware = "0.2.1"
reqwest-retry = "0.2.2"
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
serde = "1.0.159"
serde_json = "1.0.95"
serde_path_to_error = "0.1.11"
serde_with = "2.3.2"
tokio = { version = "1.27.0", features = ["full"] }


[build-dependencies]
ethers = { version="2.0.2", features = ["rustls", "openssl", "abigen"] }
