[workspace]
members = [".", "prisma-cli"]

[package]
name = "detective"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
chrono = "0.4.26"
dotenv = "0.15.0"
ethers = { version = "=2.0.6", features = ["rustls", "openssl", "abigen"] }
futures = "0.3.28"
itertools = "0.11.0"
num-bigint = "0.4.3"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7" }
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["json"] }
reqwest-middleware = "0.2.2"
reqwest-retry = "0.2.2"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = "1.0.174"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }

base64 = "0.21.2"
opentelemetry = { version = "0.19.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = [
    "tonic",
    "tls",
    "tls-roots",
    "protobuf",
    "http-proto",
] }
tonic = "0.8.3"
pyroscope = "0.5.6"
pyroscope_pprofrs = "0.2.5"
tracing = "0.1.37"
tracing-loki = "0.2.2"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"
metrics-exporter-influx = "0.1.2"
metrics = "0.21.1"

[build-dependencies]
ethers = { version = "=2.0.6", features = ["rustls", "openssl", "abigen"] }
ethers-contract-abigen = "=2.0.6"
