[workspace]
members = [".",
    "prisma-cli"]

[package]
name = "discord-butler"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
env_logger = "0.10.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = ["postgresql"] }
serde = "1.0.163"
serenity = { version = "0.11.5", features = ["cache"] }
tokio = { version = "1.28.1", features = ["full"] }
