[workspace]
members = [".", "prisma-cli"]

[package]
name = "discordsecretary"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
dotenv = "0.15.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7" }
serde = "1.0.164"
serenity = { version = "0.11.5", features = ["cache"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
