[workspace]
members = [".", "prisma-cli"]

[package]
name = "discordsecretary"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
dotenv = "0.15.0"
posthog-rs = "0.2.2"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7" }
serde = "1.0.174"
serenity = { version = "0.11.6", features = ["cache"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
