[workspace]
members = [".", "prisma-cli"]

[package]
name = "emailsecretary"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
dotenv = "0.15.0"
futures = "0.3.28"
log = "0.4.18"
num-format = "0.4.4"
posthog-rs = "0.2.2"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7" }
pyroscope = "0.5.6"
pyroscope_pprofrs = "0.2.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.164"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
