[workspace]
members = [".",
    "prisma-cli"]

[package]
name = "refresher"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
dotenv = "0.15.0"
flume = "0.10.14"
lazy_static = "1.4.0"
log = "0.4.18"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7",  features = ["postgresql"] }
pyroscope = "0.5.6"
pyroscope_pprofrs = "0.2.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.164"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
