[workspace]
members = [".",
    "prisma-cli"]

[package]
name = "refresher"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
base64 = "0.21.2"
chrono = "0.4.26"
dotenv = "0.15.0"
flume = "0.10.14"
lazy_static = "1.4.0"
log = "0.4.18"
once_cell = "1.18.0"
opentelemetry = { version = "0.19.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = ["tonic", "tls", "tls-roots", "protobuf", "http-proto"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7" }
pyroscope = "0.5.6"
pyroscope_pprofrs = "0.2.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.164"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tonic = "0.8.3"
tracing = "0.1.37"
tracing-loki = "0.2.2"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"
