[workspace]
members = [".", "prisma-cli"]

[package]
name = "slacksecretary"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
dotenv = "0.15.0"
posthog-rs = "0.2.2"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7" }
serde = "1.0.174"
tokio = { version = "1.29.1", features = ["full"] }

base64 = "0.21.2"
opentelemetry = { version = "0.19.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = [
    "tonic",
    "tls",
    "tls-roots",
    "protobuf",
    "http-proto",
] }
tonic = "0.8.3"
pyroscope = "0.5.6"
pyroscope_pprofrs = "0.2.5"
tracing = "0.1.37"
tracing-loki = "0.2.2"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"
metrics-exporter-influx = "0.1.2"
metrics = "0.21.1"
slack-morphism = { version = "1.14.2", features = ["hyper"] }
