[workspace]
members = [".", "prisma-cli"]

[package]
name = "telegramsecretary"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.72"
dotenv = "0.15.0"
log = "0.4.19"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7" }
serde = "1.0.174"
teloxide = { version = "0.12.2", features = ["macros", "throttle"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
